fixed top nav z-index

--- a/src/components/Navigation/TopNavigation/TopNavigation.module.css
+++ b/src/components/Navigation/TopNavigation/TopNavigation.module.css
@@ -5,6 +5,7 @@
     top: 0;
     width: 100%;
     transition: top 0.3s;
+    z-index: 99;
 }
 
 .WebsiteLogo {
